--- a/web/public/index.html
+++ b/web/public/index.html
@@ -11,20 +11,23 @@
                 margin-bottom: 20px;
                 float: left
             }
+            .user {
+                background-color: #eee;
+                border: 1px #ccc solid;
+                width: 50px;
+                height: 50px;
+                margin-right: 10px;
+                float: left;
+            }
         </style>
     </head>
     <body style="background-color:#000; font-family: segoe ui, arial;">
         
         <table style="margin: 100px auto; padding: 50px; background-color: rgb(237, 237, 237);">
             <tr>
-                <td id="items">
+                <td>
                     <!-- put items here -->
-                    <div class="item"></div>
-                    <div class="item"></div>
-                    <div class="item"></div>
-                    <div class="item"></div>
-                    <div class="item"></div>
-                    <div class="item"></div>
+                    <div id="items"></div>
                     <div style="clear: both;"></div>
                 </td>
                 <td rowspan="2" style="padding: 25px;">
@@ -37,8 +40,11 @@
                 </td>
             </tr>
             <tr>
-                <td id="people">
-                    <h2>Please join and get the party started!</h2>
+                <td>
+                    <div id="users">
+                        <h4>Please join and get the party started!</h4>
+                    </div>
+                    <div style="clear: both;"></div>
                 </td>
             </tr>
         </table>
@@ -81,11 +87,14 @@
                         if (data.movies != null) {
                             $("#items").empty();
                             $.each(data.movies, function(key, value) {
-                                $("#items").append($("div").html(value.toString()));
+                                $("#items").append($("div").addClass("item").html(value.toString()));
                             });
                         }
                         if (data.users != null) {
-                            
+                            $("#users").empty();
+                            $.each(data.movies, function (key, value) {
+                                $("#users").append($("div").addClass("user").html(value.toString()));
+                            });
                         }
                     }
                 });
