join url changed

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -61,7 +61,7 @@
                 var vanityId = $.cookie("vanity");
                 var serviceUri = "http://10.45.40.119:3000/";
                 var getGroup = serviceUri + "parties/";
-                var joinGroupUrl = serviceUri + "join/";
+                var joinGroupUrl = serviceUri + "parties/";
                 var joinUrl = serviceUri + "parties/" + vanityId;
 
                 if (vanityId == undefined) {
