--- a/web/public/index.html
+++ b/web/public/index.html
@@ -56,11 +56,40 @@
         <script src="http://js.pusher.com/2.1/pusher.min.js" type="text/javascript"></script>
         <script type="text/javascript">
 
-            $(document).ready(function() {
+            var vanityId;
+            var serviceUri;
+            var getGroup;
 
-                var vanityId = $.cookie("vanity");
-                var serviceUri = "http://10.45.40.119:3000/";
-                var getGroup = serviceUri + "parties/";
+            function updateView() {
+
+                $.ajax({
+                    type: "GET",
+                    url: getGroup + vanityId,
+                    async: false,
+                    success: function (data) {
+                        if (data.movies != null) {
+                            $("#items").empty();
+                            $.each(data.movies, function (key, value) {
+                                $("#items").append($("div").addClass("item").html(value.toString()));
+                            });
+                        }
+                        if (data.users != null) {
+                            $("#users").empty();
+                            $.each(data.movies, function (key, value) {
+                                $("#users").append($("div").addClass("user").html(value.toString()));
+                            });
+                        }
+                    }
+                });
+
+                setTimeout(updateView, 5000);
+            }
+
+            $(document).ready(function () {
+
+                vanityId = $.cookie("vanity");
+                serviceUri = "http://10.45.40.119:3000/";
+                getGroup = serviceUri + "parties/";
                 var joinGroupUrl = serviceUri + "parties/";
                 var joinUrl = serviceUri + "parties/" + vanityId;
 
@@ -80,32 +109,7 @@
                 new QRCode(document.getElementById("qr"), joinUrl);
                 $("#joinUrl").html(joinGroupUrl + vanityId);
 
-                $.ajax({
-                    type: "GET",
-                    url: getGroup + vanityId,
-                    async: false,
-                    success: function (data) {
-                        if (data.movies != null) {
-                            $("#items").empty();
-                            $.each(data.movies, function(key, value) {
-                                $("#items").append($("div").addClass("item").html(value.toString()));
-                            });
-                        }
-                        if (data.users != null) {
-                            $("#users").empty();
-                            $.each(data.movies, function (key, value) {
-                                $("#users").append($("div").addClass("user").html(value.toString()));
-                            });
-                        }
-                    }
-                });
-
-                var pusher = new Pusher('46ca20df50350d13e678');
-                var channel = pusher.subscribe("x" + vanityId);
-                channel.bind('event', function(data) {
-                    alert(data.message);
-                });
-
+                setTimeout(updateView, 5000);
             });
         </script>
 
