--- a/web/public/index.html
+++ b/web/public/index.html
@@ -42,9 +42,9 @@
                 </td>
             </tr>
             <tr>
-                <td>
+                <td valign="top">
                     <div id="users">
-                        <h4>Please join and get the party started!</h4>
+                        <h2>Please join and <br />get the party started!</h2>
                     </div>
                     <div style="clear: both;"></div>
                 </td>
@@ -55,7 +55,6 @@
         <script src="jquery.min.js" type="text/javascript"></script>
         <script src="jquery.cookie.js"></script>
         <script src="qrcode.min.js" type="text/javascript"></script>
-        <script src="http://js.pusher.com/2.1/pusher.min.js" type="text/javascript"></script>
         <script type="text/javascript">
 
             var vanityId;
@@ -108,7 +107,7 @@
                 }
 
                 new QRCode(document.getElementById("qr"), joinUrl);
-                $(".joinUrl").attr("href", joinGroupUrl + vanityId);
+                $(".joinUrl").attr("href", joinUrl);
 
                 setTimeout(updateView, 5000);
             });
