--- a/web/public/index.html
+++ b/web/public/index.html
@@ -5,17 +5,17 @@
             .item {
                 background-color: #eee;
                 border: 1px #ccc solid;
-                width: 120px;
-                height: 180px;
-                margin-right: 20px;
-                margin-bottom: 20px;
+                width: 80px;
+                height: 120px;
+                margin-right: 15px;
+                margin-bottom: 15px;
                 float: left
             }
             .user {
                 background-color: #eee;
                 border: 1px #ccc solid;
-                width: 50px;
-                height: 50px;
+                width: 30px;
+                height: 30px;
                 margin-right: 10px;
                 float: left;
             }
@@ -71,15 +71,15 @@
                         if (data.movies != null) {
                             $("#items").empty();
                             $.each(data.movies, function (key, value) {
-                                $("#items").append($("div").addClass("item").html(value.toString()));
+                                $("#items").append($("<img class=\"item\" width='80px' src=\"" + value.poster_url + "\"/>"));
                             });
                         }
-                        if (data.users != null) {
-                            $("#users").empty();
-                            $.each(data.movies, function (key, value) {
-                                $("#users").append($("div").addClass("user").html(value.toString()));
-                            });
-                        }
+                        //if (data.users != null) {
+                        //    $("#users").empty();
+                        //    $.each(data.movies, function (key, value) {
+                        //        $("#users").append($("div").addClass("user").html(value.toString()));
+                        //    });
+                        //}
                     }
                 });
 
