--- a/web/public/index.html
+++ b/web/public/index.html
@@ -36,8 +36,7 @@
                       <div id="qr"></div>
                     </a>
                     <div>
-                        <h1>Scan the QR code or visit</h1>
-                        <a class="joinUrl">Join</a>
+                        <h1>Scan the QR code or <a class="joinUrl">Join</a></h1>
                     </div>
                 </td>
             </tr>
