--- a/web/public/index.html
+++ b/web/public/index.html
@@ -87,7 +87,7 @@
 
             $(document).ready(function () {
 
-                vanityId = $.cookie("vanityId");
+                vanityId = "6403"; //$.cookie("vanityId");
                 serviceUri = "10.45.40.119:3000/";
                 getGroup = "http://" + serviceUri + "parties/";
                 var joinGroupUrl = "http://" + serviceUri + "parties/";
